# VerificaAssinatura

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: enforce-issue-link.yml  publish.yml  sanitizers.yml
include/: ContentInfoRetriever.h  SignatureRetriever.h  VerificaAssinatura.h
src/: ContentInfoRetriever.cpp  SignatureRetriever.cpp  VerificaAssinatura.cpp  main.cpp  verificaassinatura.cpp  verificaassinatura.h
test_package/: CMakeLists.txt  conanfile.py
test_package/resources/arquivos/: signature.p7s
test_package/resources/cmake/: verificaassinaturaConfig.cmake  verificaassinaturaTargets.cmake.in
test_package/src/: example.cpp  teste.cpp
test_package/src/UnitTests/include/: SignatureRetrieverTest.h  VerificaAssinaturaMacros.h
test_package/src/UnitTests/src/: SignatureRetrieverTest.cpp
